Order Model added, db table added, MovieGenTokenActivity refactored.

--- a/app/src/main/res/layout/activity_movie_gen_token.xml
+++ b/app/src/main/res/layout/activity_movie_gen_token.xml
@@ -66,11 +66,11 @@
         android:layout_gravity="bottom"
         android:layout_margin="16dp"
         android:padding="13dp"
-        android:onClick="signupClicked"
+        android:onClick="payClicked"
         android:background="#33ddff"
         android:backgroundTint="#33ddff"
         android:layout_alignParentBottom="true"
-        android:text="GET TOKEN"
+        android:text="PAY"
         fancy:fb_radius="30dp"/>
 
 </RelativeLayout>
