--- a/app/src/main/res/layout/dialog_order_complete.xml
+++ b/app/src/main/res/layout/dialog_order_complete.xml
@@ -32,6 +32,7 @@
         android:textSize="18sp"/>
 
     <Button
+        android:id="@+id/ok_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
