--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    tools:context="com.sdsmdg.skipthequeue.movies.LoginActivity">
+    tools:context="com.sdsmdg.skipthequeue.movies.Activities.LoginActivity">
 
     <com.github.glomadrian.codeinputlib.CodeInput
         android:id="@+id/order_id_input"
