--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -11,7 +11,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sdsmdg.skipthequeue.movies.OrderActivity">
+    tools:context="com.sdsmdg.skipthequeue.movies.Activities.OrderActivity">
 
     <ImageView
         android:id="@+id/get_token_button"
