feat: Replaces order activity with dialog

--- a/app/src/main/res/layout/activity_order_summary.xml
+++ b/app/src/main/res/layout/activity_order_summary.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_order_summary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimary"
     tools:context="com.sdsmdg.skipthequeue.movies.Activities.OrderSummary">
 
     <android.support.v7.widget.RecyclerView
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="Proceed to pay Rs.75"
-        android:background="#ff0000"
+        android:background="@color/colorPrimaryDark"
+        android:onClick="payClicked"
         android:textColor="#ffffff"/>
 
 </RelativeLayout>
