--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#00bfff</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryMovie">#ff3300</color>
+    <color name="colorPrimaryDarkMovie">#ff0000</color>
     <color name="bg_gradient_start">#31244e</color>
     <color name="white">#ffffff</color>
     <color name="gray">#d3d3d3</color>
