:art: Changes view movie status activity ui

--- a/app/src/main/res/layout/dialog_gen_order.xml
+++ b/app/src/main/res/layout/dialog_gen_order.xml
@@ -4,6 +4,7 @@
     android:layout_width="300dp"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <TextView
