--- a/app/src/main/res/layout/dialog_enter_order_id.xml
+++ b/app/src/main/res/layout/dialog_enter_order_id.xml
@@ -4,7 +4,8 @@
     android:layout_width="300dp"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
 
     <TextView
         android:layout_width="wrap_content"
