--- a/app/src/main/res/layout/dialog_gen_order.xml
+++ b/app/src/main/res/layout/dialog_gen_order.xml
@@ -20,23 +20,30 @@
         android:id="@+id/mobile_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColorHint="#77ce9d"
+        android:layout_marginTop="15dp"
+        android:textColorHint="@color/colorPrimaryDark"
         android:hint="Mobile No."
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:textColor="#000000"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
+        <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/get_order_button"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="#33ddff"
-            android:text="PAY"
-            android:textColor="@color/colorPrimary"/>
+            android:backgroundTint="#33ddff"
+            android:layout_gravity="center_horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="10dp"
+            app:fb_radius="30dp"
+            app:fb_text="PAY" />
 
         <com.victor.loading.rotate.RotateLoading
             android:id="@+id/rotate_loading"
